# platformids

./: .gitignore  MANIFEST.in  README.md  RELEASE-INFO.sh  callDocSphinx.sh  setup.cfg  setup.py
config/sphinx/default/html/docsrc/: conf.py  epydoc.conf  index.rst
config/sphinx/rtd_apiref/html/docsrc/: conf.py  index.rst  sw_design.rst
doc/en/platformids/: MITLicense.html  ModifiedArtisticLicense20.html  distributions.html  genindex.html  index.html  index_application.html  index_documentation.html  index_modules.html  index_part_abstract.html  index_part_apiref_scaled.html  index_part_blueprint.html  index_part_cockpit.html  index_part_documents.html  index_part_indices.html  index_part_license.html  index_part_platform_support.html  index_part_resources.html  index_starthere.html  install.html  objects.inv  os_categorization.html  os_custom.html  os_custom_wrapper.html  platformids.html  platformids.platforms.html  project.html  py-modindex.html  python_bitmasks.html  python_implementations.html  references.html  rtplatformids_cli.html  search.html  searchindex.js  sw_design.html
doc/en/platformids/_images/: inheritance-4a1089fdf90df814e1612da1774fff5365ea0c02.png.map  inheritance-a997cb9da28c2fcee66a6495fb3e909a088012f6.png.map  inheritance-ec660ac3a58d2dc0010cba4825527d62efefd304.png.map
doc/en/platformids/_modules/: index.html
doc/en/platformids/_modules/platformids/: __init__.html  platforms.html
doc/en/platformids/_sources/: index_application.rst.txt  index_documentation.rst.txt  index_modules.rst.txt  index_part_abstract.rst.txt  index_part_blueprint.rst.txt  index_part_cockpit.rst.txt  index_part_documents.rst.txt  index_part_resources.rst.txt  index_starthere.rst.txt  install.rst.txt  os_categorization.rst.txt  os_custom_wrapper.rst.txt  platformids.platforms.rst.txt  project.rst.txt  python_bitmasks.rst.txt  references.rst.txt  rtplatformids_cli.rst.txt
doc/en/platformids/_sources/custom/: aix.rst.txt  dragonbsd.rst.txt  ghostbsd.rst.txt  linuxmint.rst.txt  minix.rst.txt  minix2.rst.txt  nomadbsd.rst.txt  parrot.rst.txt  pentoo.rst.txt  reactos.rst.txt  (+1 more)
doc/en/platformids/_static/: epydoc-project.css  epydoc-standalone.conf  epydoc.conf
doc/en/platformids/apiref/: api-objects.txt  class-tree.html  frames-right.html  help.html  identifier-index.html  index.html  module-tree.html  platformids-module.html  platformids-pysrc.html  platformids.__main__-module.html  platformids.__main__-pysrc.html  platformids.custom-module.html  platformids.custom-pysrc.html  platformids.custom.aix-module.html  platformids.custom.aix-pysrc.html  platformids.custom.blackarch-module.html  platformids.custom.blackarch-pysrc.html  platformids.custom.dragonbsd-module.html  platformids.custom.dragonbsd-pysrc.html  platformids.custom.ghostbsd-module.html  platformids.custom.ghostbsd-pysrc.html  platformids.custom.linuxmint-module.html  platformids.custom.linuxmint-pysrc.html  platformids.custom.minix-module.html  platformids.custom.minix-pysrc.html  platformids.custom.minix2-module.html  platformids.custom.minix2-pysrc.html  platformids.custom.nomadbsd-module.html  platformids.custom.nomadbsd-pysrc.html  platformids.custom.parrot-module.html  platformids.custom.parrot-pysrc.html  platformids.custom.pentoo-module.html  platformids.custom.pentoo-pysrc.html  platformids.custom.reactos-module.html  platformids.custom.reactos-pysrc.html  platformids.custom.slackware-module.html  platformids.custom.slackware-pysrc.html  platformids.custom.trueos-module.html  platformids.custom.trueos-pysrc.html  platformids.dist-module.html  (+164 more)
doc/en/platformids/custom/: aix.html  blackarch.html  dragonbsd.html  ghostbsd.html  linuxmint.html  minix.html  minix2.html  nomadbsd.html  parrot.html  pentoo.html  reactos.html  slackware.html  trueos.html
doc/en/platformids/embed/: armbian.html  circuitpython.html  micropython.html  raspbian.html
doc/en/platformids/faq/: index.html
doc/en/platformids/howto/: howto_custom_alpine_linux.html  howto_custom_arch_linux.html  howto_custom_armbian_linux.html  howto_custom_centos_linux.html  howto_custom_debian_linux.html  howto_custom_fedora_linux.html  howto_custom_gentoo_linux.html  howto_custom_os_dist.html  howto_custom_raspbian_linux.html  howto_custom_ubuntu_linux.html  howto_embedded_custom_build.html  howto_multiplatform.html  index.html
doc/en/platformids/net/: kali.html  openwrt.html  pfsense.html
docsrc/: custom.css  distributions.rst  epydoc-standalone.conf  epydoc.conf  index.rst  index_part_blueprint.rst  index_part_platform_support.rst  install.rst  os_categorization.rst  os_custom.rst  package_init.rst  platformids.rst  profile_info.html  pyplatforms.rst  python_bitmasks.rst  python_encode_decode.rst  python_implementations.rst  references.rst  rtplatformids_cli.rst  shortcuts.rst
docsrc/_static/: custom.css
docsrc/_static/custom/: __init__.py  blackarch.py  dragonbsd.py  linuxmint.py  nomadbsd.py  reactos.py
docsrc/custom/: blackarch.rst  trueos.rst
docsrc/embed/: micropython.rst  raspbian.rst
docsrc/faq/: index.rst
docsrc/howto/: howto_custom_alpine_linux.rst  howto_custom_arch_linux.rst  howto_custom_armbian_linux.rst  howto_custom_debian_linux.rst  howto_custom_gentoo_linux.rst  howto_embedded_custom_build.rst  howto_multiplatform.rst
docsrc/images/: .gitignore  Thumbs.db  encoding-decoding-hierarchy-python2.VSD  encoding-decoding-hierarchy-python3.VSD  platformids-blueprint.VSD  platformids-components.vsd
docsrc/net/: kali.rst  openwrt.rst  pfsense.rst
platformids/: __init__.py  __main__.py  map_enum_labels.py  optionparser_platformids.py  platforms.py  prettyplatformids.py
platformids/custom/: aix.py  ghostbsd.py  minix2.py
platformids/embed/: circuitpython.py  micropython.py  raspbian.py
platformids/net/: pfsense.py
testdata/pyplatformids/: __init__.py
tests/: CallCase.py  MyTestCase.py  __init__.py
tests/00_manual_validation/Case000/: CallCase.py
tests/pyplatformids/examples/armbian/: CallCase.py
tests/pyplatformids/examples/fedora/: CallCase.py
tests/pyplatformids/examples/windows/: CallCase.py
(+277 files in other folders)
